add the solution of no. 47 problem